# Fintech

./: .gitignore  pyproject.toml
BC3/: Kalman.ipynb  M3_Rebalancing_PortfolioConstraints_extended.ipynb  README.md  TODO.md  dl.ipynb  dl_pipeline.py  harness.py  kalman.py  main.ipynb  portfolio_constraints.py  predict_then_optimize.py  presentation.tex
BC3/scripts/: restructure_notebook.py  smoke_constraints.py  smoke_kalman.py
BC3/scripts/reference/: constraints_baseline.pkl  kalman_baseline.pkl
BC4/: COPOD.ipynb  EWS_IsolationForest.ipynb  GANAnomalyDetectionPoliMI.ipynb  deep_learning_models.ipynb  presentation.tex
docs/superpowers/plans/: 2026-05-11-bc3-refactor.md
docs/superpowers/specs/: 2026-05-11-bc3-refactor-design.md
