[project]
name = "fintech"
version = "0.1.0"
description = "Fintech case study"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autoflake>=2.3.3",
    "gdown>=6.0.0",
    "hmmlearn>=0.3.3",
    "ipykernel>=7.2.0",
    "isort>=8.0.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "nbdime>=4.0.4",
    "nbqa>=1.9.1",
    "openpyxl>=3.1.5",
    "optuna>=4.8.0",
    "pandas>=3.0.2",
    "pykalman>=0.11.2",
    "pytorch-frame>=0.3.0",
    "pytorch-tabnet2>=4.6.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "tabulate>=0.10.0",
    "torch>=2.11.0",
    "xgboost>=3.2.0",
]
